public/css/style.css
@import 'https://fonts.googleapis.com/css?family=Raleway:500,700';
@import 'https://fonts.googleapis.com/css?family=Lato:400,700';

/* Misc */

body {
	position: relative;
}

.banner-text, .profile-panel, .sidebar-nav, .sections-sidebar {
	font-family: 'Raleway', sans-serif;
	font-weight: 500;
	font-style: normal;
}

a {
	cursor: pointer;
}


/* Banner */

.banner {
	box-sizing: border-box;
	background: #47abf7;
	height: 100px;
}

.banner>*>a {
	display: inline-block;
	line-height: 100px;
	font-size: 50px;
}

.topnav li a {
	margin-top: 10px;
	margin-bottom: 10px;
	padding-top: 0px;
	padding-bottom: 0px;
}

.btn.btn-md {
	padding: 0;
}

a.btn-md:active {
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
}

a.btn-md.reverse i {
	color: rgba(205, 205, 205, 0.6);
}

a.btn-md.reverse:hover i {
	color: rgba(205, 205, 205, 0.8);
}

a.btn-md.reverse:active i {
	color: rgba(245, 245, 245, 0.8);
}

a.btn-md i {
	color: rgba(50, 50, 50, 0.6);
	font-size: 30px;
}

a.btn-md:hover i {
	color: rgba(50, 50, 50, 0.8);
}

a.btn-md:active i {
	color: rgba(10, 10, 10, 0.8);
}

.banner-text {
	display: inline-block;
	font-size: 40pt;
	/*text-transform: uppercase;*/
	margin-left: 0.2em;
	color: #FFF;
	padding: auto 0.5em;
	line-height: 100px;
	cursor: default;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.banner-text a {
	color:#FFF;
	text-decoration:none;
}

.banner>div{
	float:none;
}

/* Affixes */

#nav-scroll-spy .affix {
	top: 70px;
}

#nav-scroll-spy .affix-top {
	margin-top: 20px;
}

.topnav.navbar {
	z-index: 102;
	background-color: #1870af;
	border-radius: 0;
}

.topnav.affix {
	top: 0;
}

.topnav.affix + .container-fluid {
	padding-top: 70px;
}


/* Top navbar */

.topnav {
	/*height: 50px;*/
	border: 0;
}

.topnav .tgl-btn {
	margin-top: 5px;
	margin-bottom: 5px;
}

.topnav>* {
	vertical-align: middle;
}

.topnav>*>li {
	padding-left: 5px;
}

.error-message {
	color: #dc1616;
}

.help-inline {
	margin: 0em 1em;
}

.label {
	font-family: 'Lato', sans-serif;
	line-height: 2;
}

.webui-popover-inner .close {
	position: absolute;
	right: 0;
	z-index: 1;
}

.no_select {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.topnav .navbar-right {
	margin-right:0px;
}


/*Main view*/

.paper-container {
	min-height: 100vh;
}

.page-content{
}

.page-content>.row>div {
	padding-left: 0px;
	padding-right: 0px;
}

.paper-container>section, .paper-container>header {
	position: relative;
	padding-left: 20px;
	padding-right: 20px;
}

.paper-container>section * {
	position: relative;
}

.comment-anchor {
	position: absolute!important;
	top: 0;
	bottom: 0;
	float: left;
	width: 10px;
	margin-left: -20px;
	border-radius: 5px;
	overflow: visible;
	cursor: pointer;
}

.paper-container>section>.comment-anchor {
	margin-left: -40px;
}

#loginpanel .tab-pane {
	margin-top: 20px;
}


/* Profile panel */

.profile-panel {
	padding: 2em;
	text-align: center;
}

.profile-panel>.btn {
	margin: 0.2em;
}

.profile-panel>.name, .profile-panel>.userRole {
	/*margin: auto 0.2em;*/
	color: #E5E5E5;
	/*display: inline;*/
}


/* Center and fit */

.paper-center {
	padding-right: 15px;
	padding-left: 15px;
	margin-right: auto;
	margin-left: auto;
}

@media (min-width: 768px) {
	.paper-center {
		max-width: 750px;
	}
}

@media (min-width: 992px) {
	.paper-center {
		max-width: 970px;
	}
}

@media (min-width: 1200px) {
	.paper-center {
		max-width: 1170px;
	}
}

a, a:active, a:focus {
	outline: none;
}


/* Scroll Bar */

*::-webkit-scrollbar {
	width: 10px;
	height: 10px
}

*::-webkit-scrollbar-thumb {
	background: #ccc;
}

*::-webkit-scrollbar-thumb:hover {
	background: #777;
}

#sidebar-wrapper::-webkit-scrollbar {
	width: 7px;
}

#sidebar-wrapper::-webkit-scrollbar-track {
	background: rgba(0, 0, 0, .05);
}

#sidebar-wrapper::-webkit-scrollbar-thumb {
	background-color: rgba(255, 255, 255, .4);
}

#sidebar-wrapper::-webkit-scrollbar-thumb:hover {
	background: rgba(255, 255, 255, .6);
}

.placeholderimg {
	width: 320px;
	display: block;
	margin: 3em auto;
}

#placeholder p {
	font-family: 'Raleway', sans-serif;
	font-weight: 700;
	font-size: 30pt;
	color: #CCCCCC;
	text-align: center;
}

#conferenceSelector .btn, #conferenceSelector .dropdown-menu li a {
	white-space: normal;
	width: 100%;
}


/* End Scroll Bar */


/* Carousel */

.carousel-controls a {
	color: #4D394B;
}

.carousel-controls {
	position: relative;
	margin: 0 auto;
}

.carousel-indicators {
	top: 0px;
	opacity: 0.8;
}

.carousel-indicators li {
	border-color: #000;
}

.carousel-indicators .active {
	background-color: #4D394B;
}

.comment-header time {
	display: inline-block;
	font-family: 'Lato', sans-serif;
}

.carousel-inner p {
	margin: 0px;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
}

.comment-header span {
	margin-right: 0.5em;
	display:inline-block;
	color:#337ab7;
}

.webui-popover .carousel .comment-header {
	border-bottom: 2px solid;
	padding-bottom: 0.5em;
	font-family: 'Raleway', sans-serif;
	font-weight: 700;
}

.webui-popover {
	max-width: 400px;
}


/*END Carousel

/* Annotations Insertion */
.add-annotation-btn, .add-block-annotation-btn {
	background-color: #bada55;
	position: absolute!important;
	-moz-box-shadow: 0 0 6px #000;
	-webkit-box-shadow: 0 0 6px #000;
	box-shadow: 0 0 6px #000;
	font-weight: bold;
	font-size: 20px;
	text-align: center;
	vertical-align: middle;
	color: #FFF;
	border: 2px solid #006b0a;
	outline: none;
	padding: 0;
	z-index: 101;
}
.add-annotation-btn {
	height: 30px;
	width: 30px;
	border-radius: 15px;
}

.add-block-annotation-btn {
	width: 30px;
	border-radius: 5px;
	left: -40px;
}

/*Gap closer*/
.add-block-annotation-btn::before{
	top:0;
	content:"";
	display: block;
	position: absolute!important;
	width: 15px;
	background-color: transparent;
	left: 27px;
	height: 100%;
}

section>.add-block-annotation-btn{
	left: -20px;
}

section>section>.add-block-annotation-btn{
	left: -40px;
}

.add-block-annotation-btn:hover, .add-annotation-btn:hover {
	border-color: #bada55;
}
.add-block-annotation-btn:active, .add-annotation-btn:active {
	background-color: #00ad11;
}
.inline-annotation-editor {
	width: 350px;
	min-height: 80px;
	position: relative;
	resize: none;
	border: none;
	border-radius: 5px;
	outline: none;
}
.inline-annotation-editor[disabled] {
	background-color: transparent;
	color: rgba(0, 0, 0, 0.5);
}
.inline-annotation {
	position: relative;
	cursor: pointer;
}


#closeConfDiv {
	border-top:1px dashed #CCC;
	margin-top:25px;
	padding:25px 15px 15px;
}

#closeConfDiv button {
	margin-right:15px;
	margin-bottom:10px;
}

#annotationsTable tbody tr {
    cursor: pointer;
}

.modal-body .table-responsive{
	max-height: 400px;
    overflow: scoll;
}

.multiselect-container a label {
	background-color:#FFF;
}

.multiselect-container a:hover label {
	background-color:#EEE;
}

.multiselect-container .active a, .multiselect-container .active a:hover {
	color:#333;
}

.multiselect-container .disabled a, .multiselect-container .disabled a:hover {
	color:#777;
}

#helpModal .modal-body {
	max-height: calc(100vh - 212px);
    overflow-y: auto;
}

#formInfo {
	clear:both;
}

#formPass {
	border-top:1px dashed #CCC;
	margin-top:15px;
	padding-top:15px;
}

.avatar{
	width: 128px;
	height: 128px;
}

.nav.navbar-nav.navbar-right{
	margin: 0px;
}

/*.inline-annotation::before {
  content: "";
  position: absolute;
  top: 0; 
  left: 0;
  width: 100%; 
  height: 100%;  
  opacity: .5; 
  z-index: -1;
  background: #FFF;
}*/

/*.red-selection::selection {
  background: #ffb7b7;
}
.red-selection::-moz-selection {
  background: #ffb7b7;
}*/

/*
.paper-container section:hover {
	box-shadow: 0 0 6px #4D394B;
}

.paper-container section {
	box-shadow: 0 0 0 0 #000;
	transition: all 100ms ease-out;
	border-radius: 5px;
}*/

